--- a/app/src/main/res/drawable/style_signup.xml
+++ b/app/src/main/res/drawable/style_signup.xml
@@ -3,7 +3,7 @@
     <item>
         <shape android:shape="rectangle">
             <corners android:radius="24dp" />
-            <solid android:color="#F7F7F7" />
+            <gradient android:angle="135" android:endColor="#EECDA3" android:startColor="#EF629F" />
         </shape>
     </item>
 </selector>
