--- a/app/src/main/res/drawable/style_logout.xml
+++ b/app/src/main/res/drawable/style_logout.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape android:shape="rectangle">
-            <corners android:radius="56dp" />
-            <gradient android:angle="135" android:endColor="#56C5ED" android:startColor="#71DA98" />
+            <corners android:radius="24dp" />
+            <gradient android:angle="135" android:endColor="#ee0979" android:startColor="#ff6a00" />
         </shape>
     </item>
 </selector>
