--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,30 +1,29 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/constraint"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gradient_bg"
+    android:orientation="vertical"
     android:padding="8dp"
     tools:context="com.evento.akay18.evento.SignInFragment">
 
     <android.support.design.widget.TextInputLayout
-        app:errorEnabled="true"
         android:id="@+id/emailInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="40dp"
+        app:errorEnabled="true"
         app:hintEnabled="false"
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="100dp">
 
         <EditText
             android:id="@+id/emailField"
+            style="@style/edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/edit_text"
-            android:layout_marginTop="10dp"
             android:layout_weight="1"
             android:drawableEnd="@drawable/ic_person_black_24dp"
             android:ems="10"
@@ -33,61 +32,46 @@
     </android.support.design.widget.TextInputLayout>
 
     <android.support.design.widget.TextInputLayout
-        app:passwordToggleEnabled="true"
         android:id="@+id/pwdInputLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/emailInputLayout"
         app:errorEnabled="true"
-        app:hintEnabled="false">
+        app:hintEnabled="false"
+        app:passwordToggleEnabled="true">
 
         <EditText
             android:id="@+id/PwdField"
+            style="@style/edit_text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/edit_text"
-            android:shadowColor="#000"
-            android:layout_marginTop="15dp"
             android:layout_weight="1"
             android:ems="10"
             android:hint="Password"
-            android:inputType="textPassword" />
+            android:inputType="textPassword"
+            android:shadowColor="#000" />
 
     </android.support.design.widget.TextInputLayout>
 
     <Button
-        android:id="@+id/new_login_btn"
+        android:id="@+id/signInBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAllCaps="true"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:text="SIGN IN"
+        android:layout_below="@id/pwdInputLayout"
+        android:background="@drawable/style_signin"
         android:shadowColor="#000"
-        android:textColor="#fff"
-        android:layout_margin="4dp"
-        android:textSize="14sp"
-        android:background="@drawable/btn_background"
-        />
-
-    <Button
-        android:id="@+id/signInBtn"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_weight="1"
         android:text="SIGN IN"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
+        android:textAllCaps="true"
+        android:textColor="#fff"
+        android:textSize="14sp" />
 
     <com.google.android.gms.common.SignInButton
         android:id="@+id/gSingIn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/new_login_btn"
+        android:layout_below="@+id/signInBtn"
         android:layout_marginEnd="72dp"
-        android:layout_marginTop="88dp"/>
+        android:layout_marginTop="88dp" />
 
 
 </RelativeLayout>
