--- a/app/src/main/res/layout/fragment_addevent.xml
+++ b/app/src/main/res/layout/fragment_addevent.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,164 +8,97 @@
     android:scrollbars="vertical"
     tools:context="com.evento.akay18.evento.AddEventFragment">
 
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/titleIL"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:hint="Title"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.018">
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/titleIL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Title">
 
-            <EditText
-                android:id="@+id/titleView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/descIL"
-            android:layout_width="0dp"
-            android:layout_height="53dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="176dp"
-            android:hint="Description"
-            android:maxHeight="50dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0">
-
-            <EditText
-                android:id="@+id/descView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textMultiLine|textLongMessage"
-                android:maxHeight="100dp"
-                android:maxLength="2000"
-                android:maxLines="4" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/orgIL"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:hint="Name of organiser"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.203">
-
-            <EditText
-                android:id="@+id/orgView"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-        </android.support.design.widget.TextInputLayout>
-
-        <android.support.design.widget.TextInputLayout
-            android:id="@+id/numIL"
+        <EditText
+            android:id="@+id/titleView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="272dp"
-            android:hint="Phone Number"
+            android:layout_height="wrap_content" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/orgIL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/titleIL"
+        android:hint="Name of organiser">
+
+        <EditText
+            android:id="@+id/orgView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </android.support.design.widget.TextInputLayout>
+
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/descIL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/orgIL"
+        android:hint="Description"
+        android:maxHeight="50dp">
+
+        <EditText
+            android:id="@+id/descView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textMultiLine|textLongMessage"
             android:maxHeight="100dp"
-            android:orientation="vertical"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.068">
+            android:maxLength="200"
+            android:maxLines="4" />
 
-            <android.support.design.widget.TextInputEditText
-                android:id="@+id/numView"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:inputType="textImeMultiLine|textPhonetic"
-                android:maxHeight="100dp"
-                android:maxLength="2000"
-                android:maxLines="4" />
+    </android.support.design.widget.TextInputLayout>
 
-        </android.support.design.widget.TextInputLayout>
 
-        <ImageButton
-            android:id="@+id/addDateBtn"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
-            android:layout_marginEnd="31dp"
-            android:layout_marginStart="15dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/addTimeBtn"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/numIL"
-            app:srcCompat="@drawable/ic_event_black_24dp" />
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/numIL"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/descIL"
+        android:hint="Phone Number">
 
-        <ImageButton
-            android:id="@+id/addTimeBtn"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
-            android:layout_marginEnd="21dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@+id/addLocBtn"
-            app:layout_constraintStart_toEndOf="@+id/addDateBtn"
-            app:layout_constraintTop_toBottomOf="@+id/numIL"
-            app:srcCompat="@drawable/ic_access_time_black_24dp" />
+        <android.support.design.widget.TextInputEditText
+            android:id="@+id/numView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:inputType="textPhonetic" />
 
-        <ImageButton
-            android:id="@+id/addLocBtn"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="80dp"
-            android:layout_marginEnd="17dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/addTimeBtn"
-            app:layout_constraintTop_toBottomOf="@+id/numIL"
-            app:srcCompat="@drawable/ic_add_location_black_24dp" />
+    </android.support.design.widget.TextInputLayout>
 
-        <Button
-            android:id="@+id/uploadBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="9dp"
-            android:layout_marginEnd="9dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:gravity="center_horizontal"
-            android:text="Upload Event"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/numIL"
-            app:layout_constraintVertical_bias="0.621" />
+    <ImageButton
+        android:id="@+id/addDateBtn"
+        android:layout_below="@id/numIL"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        app:srcCompat="@drawable/ic_event_black_24dp" />
 
-</android.support.constraint.ConstraintLayout>
+    <ImageButton
+        android:id="@+id/addTimeBtn"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/numIL"
+        android:layout_toRightOf="@id/addDateBtn"
+        app:srcCompat="@drawable/ic_access_time_black_24dp" />
+
+    <ImageButton
+        android:id="@+id/addLocBtn"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/numIL"
+        android:layout_toRightOf="@id/addTimeBtn"
+        app:srcCompat="@drawable/ic_add_location_black_24dp" />
+
+    <Button
+        android:id="@+id/uploadBtn"
+        android:layout_below="@id/addDateBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="Upload Event" />
+
+</RelativeLayout>
