--- a/app/src/main/res/layout/activity_sign_in.xml
+++ b/app/src/main/res/layout/activity_sign_in.xml
@@ -32,6 +32,7 @@
             android:elevation="12dp"
             app:tabBackground="@color/colorPrimary"
             app:tabGravity="fill"
+            app:tabIndicatorColor="@color/colorBack"
             app:tabSelectedTextColor="@color/colorBack"
             app:tabTextColor="@color/colorGrey">
 
