--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -2,15 +2,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context="com.evento.akay18.evento.FeedFragment">
 
-
-    <ListView
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/mRecycler"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/eventList">
-
-    </ListView>
+        android:layout_height="match_parent"
+        android:scrollbars="vertical" />
 
 </FrameLayout>
