--- a/app/src/main/res/layout/layout_card.xml
+++ b/app/src/main/res/layout/layout_card.xml
@@ -7,8 +7,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     card_view:cardBackgroundColor="#efefef"
-    card_view:cardCornerRadius="4dp"
-    card_view:cardUseCompatPadding="true">
+    card_view:cardCornerRadius="12dp"
+    card_view:cardUseCompatPadding="true"
+    card_view:cardElevation="16dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
