--- a/app/src/main/res/layout/fragment_add_event.xml
+++ b/app/src/main/res/layout/fragment_add_event.xml
@@ -1,110 +1,116 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="8dp"
-    android:scrollbars="vertical"
-    tools:context="com.evento.akay18.evento.AddEventFragment">
+    android:layout_height="match_parent">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/titleIL"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingTop="16dp"
-        app:errorEnabled="true"
-        app:hintEnabled="false">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:padding="8dp"
+        android:scrollbars="vertical"
+        tools:context="com.evento.akay18.evento.AddEventFragment">
 
-        <EditText
-            android:id="@+id/titleView"
-            style="@style/edit_text"
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/titleIL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableEnd="@drawable/ic_title_black_24dp"
-            android:ems="10"
-            android:singleLine="true"
-            android:hint="Event Name" />
+            android:paddingTop="16dp"
+            app:errorEnabled="true"
+            app:hintEnabled="false">
 
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/titleView"
+                style="@style/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableEnd="@drawable/ic_title_black_24dp"
+                android:ems="10"
+                android:hint="Event Name"
+                android:singleLine="true" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/orgIL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/titleIL"
-        app:errorEnabled="true"
-        app:hintEnabled="false">
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/orgView"
-            style="@style/edit_text"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/orgIL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:drawableEnd="@drawable/ic_account_balance_black_24dp"
-            android:ems="10"
-            android:singleLine="true"
-            android:hint="Name of Organiser" />
+            android:layout_below="@id/titleIL"
+            app:errorEnabled="true"
+            app:hintEnabled="false">
 
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/orgView"
+                style="@style/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:drawableEnd="@drawable/ic_account_balance_black_24dp"
+                android:ems="10"
+                android:hint="Name of Organiser"
+                android:singleLine="true" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/descIL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/orgIL"
-        android:maxHeight="50dp"
-        app:errorEnabled="true"
-        app:hintEnabled="false">
+        </android.support.design.widget.TextInputLayout>
 
-        <EditText
-            android:id="@+id/descView"
-            style="@style/edit_text"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/descIL"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:drawableEnd="@drawable/ic_description_black_24dp"
-            android:ems="10"
-            android:hint="Add a little Description"
-            android:inputType="textMultiLine|textLongMessage"
-            android:maxHeight="100dp"
-            android:maxLength="200"
-            android:maxLines="4" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/orgIL"
+            android:maxHeight="50dp"
+            app:errorEnabled="true"
+            app:hintEnabled="false">
 
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/descView"
+                style="@style/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:drawableEnd="@drawable/ic_description_black_24dp"
+                android:ems="10"
+                android:hint="Add a little Description"
+                android:inputType="textMultiLine|textLongMessage"
+                android:maxHeight="100dp"
+                android:maxLength="200"
+                android:maxLines="4" />
+
+        </android.support.design.widget.TextInputLayout>
 
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/numIL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/descIL"
-        app:errorEnabled="true"
-        app:hintEnabled="false">
-
-        <EditText
-            android:id="@+id/numView"
-            style="@style/edit_text"
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/numIL"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:drawableEnd="@drawable/ic_phone_black_24dp"
-            android:ems="10"
-            android:hint="Phone Number"
-            android:inputType="phone" />
+            android:layout_height="wrap_content"
+            android:layout_below="@id/descIL"
+            app:errorEnabled="true"
+            app:hintEnabled="false">
 
-    </android.support.design.widget.TextInputLayout>
+            <EditText
+                android:id="@+id/numView"
+                style="@style/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:drawableEnd="@drawable/ic_phone_black_24dp"
+                android:ems="10"
+                android:hint="Phone Number"
+                android:inputType="phone" />
 
-    <RelativeLayout
-        android:id="@+id/btnGrp"
-        android:layout_below="@+id/numIL"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        </android.support.design.widget.TextInputLayout>
 
-        <!--<ImageButton-->
+        <RelativeLayout
+            android:id="@+id/btnGrp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/numIL">
+
+            <!--<ImageButton-->
             <!--android:id="@+id/addDateBtn"-->
             <!--android:background="@drawable/style_white"-->
             <!--android:layout_width="88dp"-->
@@ -113,46 +119,48 @@
             <!--android:layout_alignParentStart="true"-->
             <!--app:srcCompat="@drawable/ic_event_black_24dp" />-->
 
+            <Button
+                android:id="@+id/addDateBtn"
+                android:layout_width="88dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/style_white"
+                android:drawableStart="@drawable/ic_event_black_24dp"
+                android:padding="8dp" />
+
+            <ImageButton
+                android:id="@+id/addTimeBtn"
+                android:layout_width="88dp"
+                android:layout_height="40dp"
+                android:layout_centerInParent="true"
+                android:background="@drawable/style_white"
+                android:padding="8dp"
+                app:srcCompat="@drawable/ic_access_time_black_24dp" />
+
+            <ImageButton
+                android:id="@+id/addLocBtn"
+                android:layout_width="88dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:background="@drawable/style_white"
+                android:padding="8dp"
+                app:srcCompat="@drawable/ic_add_location_black_24dp" />
+
+        </RelativeLayout>
+
         <Button
-            android:id="@+id/addDateBtn"
-            android:background="@drawable/style_white"
-            android:layout_width="88dp"
-            android:layout_height="40dp"
-            android:padding="8dp"
-            android:layout_alignParentStart="true"
-            android:drawableStart="@drawable/ic_event_black_24dp" />
-
-        <ImageButton
-            android:id="@+id/addTimeBtn"
-            android:background="@drawable/style_white"
-            android:layout_width="88dp"
-            android:layout_height="40dp"
-            android:padding="8dp"
-            android:layout_centerInParent="true"
-            app:srcCompat="@drawable/ic_access_time_black_24dp" />
-
-        <ImageButton
-            android:id="@+id/addLocBtn"
-            android:background="@drawable/style_white"
-            android:layout_width="88dp"
-            android:layout_height="40dp"
-            android:padding="8dp"
-            android:layout_alignParentEnd="true"
-            app:srcCompat="@drawable/ic_add_location_black_24dp" />
+            android:id="@+id/uploadBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/btnGrp"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/style_signin"
+            android:shadowColor="#000"
+            android:text="ADD EVENT"
+            android:textAllCaps="true"
+            android:textColor="#fff"
+            android:textSize="14sp" />
 
     </RelativeLayout>
 
-    <Button
-        android:id="@+id/uploadBtn"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/btnGrp"
-        android:layout_marginTop="16dp"
-        android:background="@drawable/style_signin"
-        android:shadowColor="#000"
-        android:text="ADD EVENT"
-        android:textAllCaps="true"
-        android:textColor="#fff"
-        android:textSize="14sp" />
-
-</RelativeLayout>
+</ScrollView>
