--- a/app/src/main/res/layout/fragment_feed.xml
+++ b/app/src/main/res/layout/fragment_feed.xml
@@ -8,6 +8,7 @@
         android:id="@+id/mRecycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="56dp"
         android:scrollbars="vertical" />
 
 </FrameLayout>
