--- a/app/src/main/res/layout/fragment_add_event.xml
+++ b/app/src/main/res/layout/fragment_add_event.xml
@@ -110,23 +110,25 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/numIL">
 
-            <!--<ImageButton-->
-            <!--android:id="@+id/addDateBtn"-->
-            <!--android:background="@drawable/style_white"-->
-            <!--android:layout_width="88dp"-->
-            <!--android:layout_height="40dp"-->
-            <!--android:padding="8dp"-->
-            <!--android:layout_alignParentStart="true"-->
-            <!--app:srcCompat="@drawable/ic_event_black_24dp" />-->
-
-            <Button
+            <ImageButton
                 android:id="@+id/addDateBtn"
                 android:layout_width="88dp"
                 android:layout_height="40dp"
                 android:layout_alignParentStart="true"
                 android:background="@drawable/style_white"
-                android:drawableStart="@drawable/ic_event_black_24dp"
-                android:padding="8dp" />
+                android:padding="8dp"
+                android:layout_marginBottom="4dp"
+                app:srcCompat="@drawable/ic_event_black_24dp" />
+
+            <Button
+                android:id="@+id/addDateBtnText"
+                android:layout_width="88dp"
+                android:layout_height="40dp"
+                android:layout_alignParentStart="true"
+                android:background="@drawable/style_white"
+                android:padding="8dp"
+                android:layout_marginBottom="4dp"
+                android:visibility="gone" />
 
             <ImageButton
                 android:id="@+id/addTimeBtn"
@@ -135,7 +137,18 @@
                 android:layout_centerInParent="true"
                 android:background="@drawable/style_white"
                 android:padding="8dp"
+                android:layout_marginBottom="4dp"
                 app:srcCompat="@drawable/ic_access_time_black_24dp" />
+
+            <Button
+                android:id="@+id/addTimeBtnText"
+                android:layout_width="88dp"
+                android:layout_height="40dp"
+                android:layout_centerInParent="true"
+                android:background="@drawable/style_white"
+                android:padding="8dp"
+                android:layout_marginBottom="4dp"
+                android:visibility="gone" />
 
             <ImageButton
                 android:id="@+id/addLocBtn"
@@ -144,6 +157,7 @@
                 android:layout_alignParentEnd="true"
                 android:background="@drawable/style_white"
                 android:padding="8dp"
+                android:layout_marginBottom="4dp"
                 app:srcCompat="@drawable/ic_add_location_black_24dp" />
 
         </RelativeLayout>
@@ -154,6 +168,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/btnGrp"
             android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
             android:background="@drawable/style_signin"
             android:shadowColor="#000"
             android:text="ADD EVENT"
