--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,10 +3,15 @@
     <!--<color name="colorPrimary">#607D8B</color>-->
     <color name="colorPrimary">#00BCD4</color>
     <color name="colorPrimaryDark">#4E342E</color>
-    <color name="colorAccent">#263238</color>
+    <color name="colorAccent">#E91E63</color>
     <color name="colorGrey">#757575</color>
     <color name="colorButton">#80CBC4</color>
     <color name="colorBack">#F0F0F0</color>
+
+    //Alternate Theme
+    <color name="colorPrimary2">#000</color>
+    <color name="colorPrimaryDark2">#000</color>
+    <color name="colorAccent2">#004D40</color>
 
     //BNB
     <color name="item_feed">#26c6da</color>
