--- a/app/src/main/res/layout/layout_card.xml
+++ b/app/src/main/res/layout/layout_card.xml
@@ -74,6 +74,17 @@
             android:textColor="#4b4b4b"
             android:textSize="14sp" />
 
+        <TextView
+            android:id="@+id/info_direction"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_below="@id/info_location"
+            android:textColor="#0D47A1"
+            android:textSize="14sp"
+            android:text="Get Directions"
+            android:onClick="getDirections"/>
+
     </RelativeLayout>
 
 </android.support.v7.widget.CardView>
