User Profile - My Events fix

--- a/app/src/main/res/layout/fragment_add_event.xml
+++ b/app/src/main/res/layout/fragment_add_event.xml
@@ -2,7 +2,8 @@
 
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -99,10 +100,11 @@
                 android:layout_weight="1"
                 android:drawableEnd="@drawable/ic_phone_black_24dp"
                 android:ems="10"
-                android:hint="Phone Number"
+                android:hint="Contact Number"
                 android:inputType="phone" />
 
         </android.support.design.widget.TextInputLayout>
+
 
         <RelativeLayout
             android:id="@+id/btnGrp"
