--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -6,20 +6,42 @@
     android:padding="8dp"
     tools:context="com.evento.akay18.evento.SettingFragment">
 
-    <RelativeLayout
-        style="@style/edit_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp">
 
-        <TextView
-            android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/searchIL"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="Search"
-            android:textSize="20sp" />
+            android:layout_marginTop="16dp"
+            android:layout_alignParentStart="true"
+            app:errorEnabled="true"
+            app:hintEnabled="false">
+
+            <EditText
+                android:id="@+id/searchField"
+                style="@style/edit_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_search_black_24dp"
+                android:hint="Search"
+                android:inputType="text"
+                android:singleLine="true" />
+
+        </android.support.design.widget.TextInputLayout>
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:background="@drawable/style_signup"
+            android:text="GO"
+            android:textAllCaps="true"
+            android:textColor="#fff"
+            android:textSize="14sp"  />
 
     </RelativeLayout>
-
 
 </FrameLayout>
